--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
-title: [Model Predictive Control of Noninteracting Active Brownian Particles]
+title: Model Predictive Control of Noninteracting Active Brownian Particles
 description: |
   Titus Quah, Sho C. Takatori, and James B. Rawlings <br>
   Department of Chemical Engineering, University of California, Santa Barbara
